# satlinkbudget

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  component_database.md  ecosystem.md  getting_started.md  link_budget_theory.md  link_budget_walkthrough.md  standards_references.md  validation.md
examples/: antenna_comparison.py  atmospheric_effects.py  ber_comparison.py  generate_all_images.py  integration_sgp4.py  pass_simulation_plots.py  quickstart_link_budget.py  waterfall_chart.py
src/satlinkbudget/: __init__.py  __main__.py
src/satlinkbudget/antenna/: __init__.py  _dipole.py  _helix.py  _horn.py  _parabolic.py  _patch.py  _pointing.py
tests/: conftest.py
tests/test_antenna/: test_other_antennas.py  test_parabolic.py  test_pointing.py
tests/test_api/: test_services.py
tests/test_atmosphere/: test_cloud.py  test_gaseous.py  test_rain.py  test_scintillation.py  test_total.py
tests/test_budget/: test_link.py  test_receiver.py  test_results.py  test_transmitter.py
tests/test_contrib/: test_sgp4_integration.py  test_skyfield_integration.py
tests/test_data/: test_registry.py
tests/test_integration/: test_end_to_end.py
tests/test_mission/: test_config.py
tests/test_modem/: test_coding.py  test_modulation.py  test_performance.py
tests/test_orbit/: test_contact.py  test_doppler.py  test_groundstation.py  test_propagator.py
tests/test_rf/: test_conversions.py  test_noise.py  test_path_loss.py
tests/test_simulation/: test_engine.py  test_report.py
tests/test_validation/: test_checks.py
(+81 files in other folders)
